Dates and titles

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -51,7 +51,7 @@
 
             <div class="resume-item">
                 <h3 class="resume-item-title">Pro Git, 2nd Edition</h3>
-                <h4 class="resume-item-details">2015</h4>
+                <h4 class="resume-item-details">Author &bull; 2014 — 2015</h4>
                 <p class="resume-item-copy">
                     This is effectively <em>the book</em> on Git, and I was honored and excited when Scott asked me to co-author the second edition. It's now even better than it was when I read it as a younger engineer, and the ability to help developers new and old become better at their craft is a source of pride.
                 </p>
@@ -59,7 +59,7 @@
 
             <div class="resume-item">
                 <h3 class="resume-item-title">Video Training</h3>
-                <h4 class="resume-item-details">2015 — Present</h4>
+                <h4 class="resume-item-details">Video Star &bull; 2015 — Present</h4>
                 <p class="resume-item-copy">
                     I love to teach, and as a side project I've been recording training videos on various topics.
                     <ul>
@@ -72,7 +72,7 @@
 
             <div class="resume-item">
                 <h3 class="resume-item-title">Gridium</h3>
-                <h4 class="resume-item-details">2014 — Present</h4>
+                <h4 class="resume-item-details">Engineer &bull; 2014 — Present</h4>
                     <p class="resume-item-copy">
                         The opportunity to work with an energy startup was very attractive to me, and since I've never worked at a company in this stage of its history, I felt like I had to work here.
                     </p>
@@ -86,7 +86,7 @@
 
             <div class="resume-item">
                 <h3 class="resume-item-title">GitHub</h3>
-                <h4 class="resume-item-details">2012 — 2014</h4>
+                <h4 class="resume-item-details">Engineer &bull; 2012 — 2014</h4>
                     <p class="resume-item-copy">
                         This was an opportunity I couldn't pass up. GitHub had been on my I-need-to-work-here list since about 2009, and when I was offered a job, I jumped at it.
                     </p>
@@ -101,7 +101,7 @@
 
             <div class="resume-item">
                 <h3 class="resume-item-title">Monsoon Commerce</h3>
-                <h4 class="resume-item-details">2011 — 2012</h4>
+                <h4 class="resume-item-details">Engineer &bull; 2011 — 2012</h4>
                 <p class="resume-item-copy">
                     In 2010, I suffered a major personal setback.  I needed a change of pace, new scenery, and different technology.  I traded in my Droid for an iPhone, moved to Portland, and took a job downtown.
                 </p>
@@ -116,7 +116,7 @@
 
             <div class="resume-item">
                 <h3 class="resume-item-title">Wacom Technology</h3>
-                <h4 class="resume-item-details">2006 — 2011</h4>
+                <h4 class="resume-item-details">Engineer &bull; 2006 — 2011</h4>
                 <p class="resume-item-copy">
                     I decided I wanted to be in the Portland area.  Pickings were slim at the time, but when a position at <em>this</em> company came up, I had to take it.
                 </p>
@@ -181,7 +181,7 @@
 
             <div class="resume-item">
                 <h3 class="resume-item-title">Oregon State University</h3>
-                <h4 class="resume-item-details">Bachelors Degree, Computer Engineering &bull; 1984 &mdash; 1986</h4>
+                <h4 class="resume-item-details">Bachelors Degree, Computer Engineering &bull; 1999 — 2003</h4>
                 <p class="resume-item-copy">
                     This is where I cut my teeth, and where I got my first taste of professional engineering.  I was part of an internship program, and had a full year of experience before I graduated.
                 </p>
