--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -41,67 +41,101 @@
 
         </header>
 
-        {% if site.resume_section_experience %}
-        <!-- begin Experience -->
         <section class="content-section">
 
             <header class="section-header">
-                <h2>Experience</h2>
+                <h2>Side Projects</h2>
             </header>
 
             <div class="resume-item">
                 <h3 class="resume-item-title">Pro Git, 2nd Edition</h3>
-                <h4 class="resume-item-details">Author &bull; 2014 — 2015</h4>
                 <p class="resume-item-copy">
                     This is effectively <em>the book</em> on Git, and I was honored and excited when Scott asked me to co-author the second edition. It's now even better than it was when I read it as a younger engineer, and the ability to help developers new and old become better at their craft is a source of pride.
                 </p>
             </div><!-- end of resume-item -->
 
             <div class="resume-item">
-                <h3 class="resume-item-title">Video Training</h3>
-                <h4 class="resume-item-details">Video Star &bull; 2015 — Present</h4>
+                <h3 class="resume-item-title">Building Tools with GitHub</h3>
                 <p class="resume-item-copy">
-                    I love to teach, and as a side project I've been recording training videos on various topics.
-                    <ul>
-                        <li><a href="http://www.skillsoft.com/catalog/detail.asp?CourseCode=sd_gitf_a01_it_enus">Beginning</a> and <a href="http://www.skillsoft.com/catalog/detail.asp?CourseCode=sd_gitf_a02_it_enus">Advanced Git</a> (Skillsoft)</li>
-                        <li><a href="http://www.infiniteskills.com/training/porting-from-python-2-to-python-3.html">Porting from Python 2 to Python 3</a> (O'Reilly)</li>
-                        <li>Real-World Applications with Docker and Kubernetes (O'Reilly, in production)</li>
-                    </ul>
+                    I contributed two chapters to Chris Dawson's book on the GitHub API.
                 </p>
             </div><!-- end of resume-item -->
 
             <div class="resume-item">
+                <h3 class="resume-item-title">Video Training</h3>
+                <p class="resume-item-copy">
+                    I love to teach, and as a side project I've been recording training videos on various topics.
+                </p>
+                <ul class="resume-item-copy">
+                    <li><a href="http://www.skillsoft.com/catalog/detail.asp?CourseCode=sd_gitf_a01_it_enus">Beginning</a> and <a href="http://www.skillsoft.com/catalog/detail.asp?CourseCode=sd_gitf_a02_it_enus">Advanced Git</a> (Skillsoft)</li>
+                    <li><a href="http://www.infiniteskills.com/training/porting-from-python-2-to-python-3.html">Porting from Python 2 to Python 3</a> (O'Reilly)</li>
+                    <li>Real-World Applications with Docker and Kubernetes (O'Reilly, in production)</li>
+                </ul>
+            </div><!-- end of resume-item -->
+
+            <header class="section-header">
+                <h2>Speaking</h2>
+            </header>
+
+            <div class="resume-item">
+                <h3 class="resume-item-title">Robots and Culture</h3>
+                <p class="resume-item-copy">
+                    I'd been thinking a lot about how automation can change a company's culture. The best example of this that I've seen is the addition of a robot to a team that uses chat. I gave <a href="/talks/robots/">this talk</a> at <a href="http://joyofcoding.org/">Joy of Coding 2015</a> in Rotterdam, and updated it for <a href="http://2015.cascadiajs.com/">CascadiaFest 2015</a> in Blaine, Washington.
+                </p>
+            </div>
+
+            <div class="resume-item">
+                <h3 class="resume-item-title">Better at Git</h3>
+                <p class="resume-item-copy">
+                    While I worked there on a Git implementation, I was very interested in teaching people about Git. I found that just a little bit of knowledge about Git internals made people <em>much</em> more effective at using the tool. I gave <a href="/talks/openblend.html">this talk</a> in various forms at various conferences over the course of two years:
+                </p>
+
+                <ul class="resume-item-copy">
+                    <li><a href="http://confoo.ca/en/2014/speakers">ConFoo 2014</a> (Montreal, Canada)</li>
+                    <li><a href="http://world.apps-world.net/">Apps World Europe 2013</a> (London, UK)</li>
+                    <li><a href="https://techforum.mail.ru/">Mail.ru Techforum 2013</a> (Moscow, Russia)</li>
+                    <li>Web &amp; PHP Conference 2013 (San Jose, CA)</li>
+                    <li><a href="http://confoo.ca/en/2013/speakers">ConFoo 2013</a> (Montreal, Canada)</li>
+                    <li><a href="http://conference.phpbenelux.eu/2013/">PHP Benelux 2013</a> (Antwerp, Belgium)</li>
+                    <li><a href="http://www.openblend.org/en/archive/2012/welcome">OpenBlend 2012</a> (Slovenia)</li>
+                </ul>
+            </div>
+
+            <header class="section-header">
+                <h2>Working</h2>
+            </header>
+
+            <div class="resume-item">
                 <h3 class="resume-item-title">Gridium</h3>
-                <h4 class="resume-item-details">Engineer &bull; 2014 — Present</h4>
-                    <p class="resume-item-copy">
-                        The opportunity to work with an energy startup was very attractive to me, and since I've never worked at a company in this stage of its history, I felt like I had to work here.
-                    </p>
-                    <p class="resume-item-copy">
-                        I've found that being part of such a small team has some major advantages, among which is the ability to shape the culture and technological substrate. I'm helping to build the kind of company I want to work for.
-                    </p>
-                    <p class="resume-item-copy">
-                        I've been working on all parts of the web-application stack, from hosting in Docker to data storage to API design to Ember-backed front-end work. I've also done some culture hacking with Hubot, which has resulted in some open-source plugins and giving <a href="http://ben.straub.cc/talks/robots">talks at conferences</a>.
-                    </p>
+                <h4 class="resume-item-details">Little Company, Big Impact &bull; 2014 — Present</h4>
+                <p class="resume-item-copy">
+                    The opportunity to work with a small, customer-focused startup at an early stage was very attractive to me, and since I've never worked at a company in this chapter of its history, I felt like I had to take this chance.
+                </p>
+                <p class="resume-item-copy">
+                    I've found that being part of such a small team has some major advantages, among which is the ability to shape the culture and technological substrate. I'm helping to build the kind of company I want to work for. Working on a software system at the beginning of its life gave me the opportunity to apply all the lessons I've learned from working on more mature applications.
+                </p>
+                <p class="resume-item-copy">
+                    I've been working on all parts of the web-application stack, from hosting in Docker to data storage to API design to Ember on the front end. I've also been hacking the culture with <a href="https://hubot.github.com/">Hubot</a>, and spreading organizational, cultural, and technological wisdom.
+                </p>
             </div><!-- end of resume-item -->
 
             <div class="resume-item">
                 <h3 class="resume-item-title">GitHub</h3>
-                <h4 class="resume-item-details">Engineer &bull; 2012 — 2014</h4>
-                    <p class="resume-item-copy">
-                        This was an opportunity I couldn't pass up. GitHub had been on my I-need-to-work-here list since about 2009, and when I was offered a job, I jumped at it.
-                    </p>
-                    <p class="resume-item-copy">
-                        This was where I found out what it is to be a part of the Internet in a real way. I traveled the world, speaking at conferences. I worked with my personal heroes. I learned what it was to help make a company. This was truly the big time.
-                    </p>
-                    <p class="resume-item-copy">
-                        My main focus was <a href="http://libgit2.github.com">libgit2</a>, an implementation of git with a nice API and no dependencies on a UNIX environment. This led me to helping out with back-end systems, mainline git, and even the native clients (<a href="https://desktop.github.com">GitHub Desktop</a>). I helped run an open-source project, wrote its documentation, and found out how I work best.
-                    </p>
-
+                <h4 class="resume-item-details">The Big Show &bull; 2012 — 2014</h4>
+                <p class="resume-item-copy">
+                    GitHub had been on my I-need-to-work-here list since about 2009, and when I was offered a job, I jumped at it. It was everything I had hoped for, and more.
+                </p>
+                <p class="resume-item-copy">
+                    This was where I found out what it is to be a citizen of the Internet in a real way. I traveled the world, speaking at conferences. I worked with my personal heroes. I learned what it was to help make a company. This was truly the big time.
+                </p>
+                <p class="resume-item-copy">
+                    My main focus was <a href="http://libgit2.github.com">libgit2</a>, an implementation of git with a nice API, and no dependencies on a UNIX environment. This led me to helping out with back-end systems, mainline git, and even the native clients (<a href="https://desktop.github.com">GitHub Desktop</a>). I helped run an open-source project, wrote its documentation, and found out how I work best.
+                </p>
             </div><!-- end of resume-item -->
 
             <div class="resume-item">
                 <h3 class="resume-item-title">Monsoon Commerce</h3>
-                <h4 class="resume-item-details">Engineer &bull; 2011 — 2012</h4>
+                <h4 class="resume-item-details">Don't Call It a Comeback &bull; 2011 — 2012</h4>
                 <p class="resume-item-copy">
                     In 2010, I suffered a major personal setback.  I needed a change of pace, new scenery, and different technology.  I traded in my Droid for an iPhone, moved to Portland, and took a job downtown.
                 </p>
@@ -111,12 +145,11 @@
                 <p class="resume-item-copy">
                     I worked on a system that helps people sell things on the Internet. Sellers tell my code what kinds of things they have, and my code lists those items on eBay and Amazon (and a dozen others), and <em>figures out what price they should be.</em>  I led the charge to modernize the UX on a six-year-old WinForms codebase, and educated the entire team on the best way to do it.
                 </p>
-            </div><!-- end of resume-item -->
-
+            </div>
 
             <div class="resume-item">
                 <h3 class="resume-item-title">Wacom Technology</h3>
-                <h4 class="resume-item-details">Engineer &bull; 2006 — 2011</h4>
+                <h4 class="resume-item-details">Taking On the World &bull; 2006 — 2011</h4>
                 <p class="resume-item-copy">
                     I decided I wanted to be in the Portland area.  Pickings were slim at the time, but when a position at <em>this</em> company came up, I had to take it.
                 </p>
@@ -126,10 +159,8 @@
                 <p class="resume-item-copy">
                     I wrote drivers for USB/HID devices, and the connectors and services that make them sing.  Without the software I made, a tablet would be nothing but a fancy mousepad; with it, a user can kick some serious ass.  The system spans the chasm from kernel- to user-mode, from datastream processing to UI.  And it does it in 13 languages.
                 </p>
-            </div><!-- end of resume-item -->
+            </div>
         </section>
-        <!-- end Experience -->
-        {% endif %}
 
         {% if site.resume_section_skills %}
         <!-- begin Skills -->
@@ -155,10 +186,22 @@
                     I've written code for OS X, Linux, and Windows, and I've written code that runs on all three. I've solved the same problems Docker solves. I've written device drivers, GUI applications, HTTP backends, and HTML-CSS-Javascript front ends, with and without frameworks.
                 </p>
                 <p class="resume-item-copy">
-                    I know the other stuff too. I have a favorite source control tool. I have opinions on defect tracking. I know the difference between UCS-2 and UTF-16. And I'd love to debate agile versus Agile.
+                    I know the weird stuff too. I have a favorite source control tool. I have opinions on defect tracking. I know the difference between UCS-2 and UTF-16. I know what how you say what you say says about what you're saying. And I'd love to debate agile versus Agile.
                 </p>
             </div>
 
+            <div class="resume-item">
+                <h4 class="resume-item-details">My Secret Weapon</h4>
+                <p>
+                    I love to learn.  Especially when it comes to technology.
+                </p>
+                <p>
+                    Give me two weeks and a good book, and I'll help you find bugs in an iOS app, and <em>I'll be happy doing it.</em>  Scala?  Sounds like fun.  COBOL?  Well, we all have our limits.
+                </p>
+                <p>
+                    This is what I bring.  I'm really good at staying up to date, bringing in fresh ideas, and trying new things.
+                </p>
+            </div>
         </section>
         <!-- end Skills -->
         {% endif %}
