Reordering and polishing

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -41,7 +41,51 @@
 
         </header>
 
-        <section class="content-section">
+        <section class="content-section"> <!-- Working -->
+            <header class="section-header">
+                <h2>Working</h2>
+            </header>
+
+            <div class="resume-item">
+                <h3 class="resume-item-title">Gridium</h3>
+                <h4 class="resume-item-details">2014 — Present</h4>
+                <p class="resume-item-copy">
+                    The opportunity to work with a small, customer-focused startup at an early stage was very attractive to me, and since I've never worked at a company in this chapter of its history, I felt like I had to take this chance.
+                </p>
+                <p class="resume-item-copy">
+                    I've found that being part of such a small team has some major advantages, among which is the ability to shape the culture and technological substrate. I'm helping to build the kind of company I want to work for. Working on a software system at the beginning of its life gave me the opportunity to apply all the lessons I've learned from working on more mature applications.
+                </p>
+                <p class="resume-item-copy">
+                    I've been working on all parts of the web-application stack, from hosting in Docker to data storage to API design to Ember on the front end. I've also been hacking the culture with <a href="https://hubot.github.com/">Hubot</a>, and spreading organizational, cultural, and technological wisdom.
+                </p>
+            </div><!-- end of resume-item -->
+
+            <div class="resume-item">
+                <h3 class="resume-item-title">GitHub</h3>
+                <h4 class="resume-item-details">2012 — 2014</h4>
+                <p class="resume-item-copy">
+                    GitHub had been on my I-need-to-work-here list since about 2009, and when I was offered a job, I jumped at it. It was everything I had hoped for, and more.
+                </p>
+                <p class="resume-item-copy">
+                    This was where I found out what it is to be a citizen of the Internet in a real way. I traveled the world, speaking at conferences. I worked with my personal heroes. I learned what it was to help make a company. This was truly the big time.
+                </p>
+                <p class="resume-item-copy">
+                    My main focus was <a href="http://libgit2.github.com">libgit2</a>, an implementation of git with a nice API, and no dependencies on a UNIX environment. This led me to helping out with back-end systems, mainline git, and even the native clients (<a href="https://desktop.github.com">GitHub Desktop</a>). I helped run an open-source project, wrote its documentation, and found out how I work best.
+                </p>
+            </div><!-- end of resume-item -->
+
+            <div class="resume-item">
+                <h3 class="resume-item-title">Monsoon Commerce</h3>
+                <h4 class="resume-item-details">2011 — 2012</h4>
+            </div>
+
+            <div class="resume-item">
+                <h3 class="resume-item-title">Wacom Technology</h3>
+                <h4 class="resume-item-details">2006 — 2011</h4>
+            </div>
+        </section>
+
+        <section class="content-section"> <!-- Side projects -->
 
             <header class="section-header">
                 <h2>Side Projects</h2>
@@ -57,7 +101,7 @@
             <div class="resume-item">
                 <h3 class="resume-item-title">Building Tools with GitHub</h3>
                 <p class="resume-item-copy">
-                    I contributed two chapters to Chris Dawson's book on the GitHub API.
+                    I contributed two chapters to Chris Dawson's book on GitHub's API. This is like the missing manual for GitHub, and includes lots of examples of how to write code that works with source control, issues, and lots more. I wrote a chapter on the search API (in Python), and a chapter on the commit-status API (in C#).
                 </p>
             </div><!-- end of resume-item -->
 
@@ -72,7 +116,9 @@
                     <li>Real-World Applications with Docker and Kubernetes (O'Reilly, in production)</li>
                 </ul>
             </div><!-- end of resume-item -->
+        </section>
 
+        <section class="content-section"> <!-- Speaking -->
             <header class="section-header">
                 <h2>Speaking</h2>
             </header>
@@ -100,71 +146,9 @@
                     <li><a href="http://www.openblend.org/en/archive/2012/welcome">OpenBlend 2012</a> (Slovenia)</li>
                 </ul>
             </div>
-
-            <header class="section-header">
-                <h2>Working</h2>
-            </header>
-
-            <div class="resume-item">
-                <h3 class="resume-item-title">Gridium</h3>
-                <h4 class="resume-item-details">Little Company, Big Impact &bull; 2014 — Present</h4>
-                <p class="resume-item-copy">
-                    The opportunity to work with a small, customer-focused startup at an early stage was very attractive to me, and since I've never worked at a company in this chapter of its history, I felt like I had to take this chance.
-                </p>
-                <p class="resume-item-copy">
-                    I've found that being part of such a small team has some major advantages, among which is the ability to shape the culture and technological substrate. I'm helping to build the kind of company I want to work for. Working on a software system at the beginning of its life gave me the opportunity to apply all the lessons I've learned from working on more mature applications.
-                </p>
-                <p class="resume-item-copy">
-                    I've been working on all parts of the web-application stack, from hosting in Docker to data storage to API design to Ember on the front end. I've also been hacking the culture with <a href="https://hubot.github.com/">Hubot</a>, and spreading organizational, cultural, and technological wisdom.
-                </p>
-            </div><!-- end of resume-item -->
-
-            <div class="resume-item">
-                <h3 class="resume-item-title">GitHub</h3>
-                <h4 class="resume-item-details">The Big Show &bull; 2012 — 2014</h4>
-                <p class="resume-item-copy">
-                    GitHub had been on my I-need-to-work-here list since about 2009, and when I was offered a job, I jumped at it. It was everything I had hoped for, and more.
-                </p>
-                <p class="resume-item-copy">
-                    This was where I found out what it is to be a citizen of the Internet in a real way. I traveled the world, speaking at conferences. I worked with my personal heroes. I learned what it was to help make a company. This was truly the big time.
-                </p>
-                <p class="resume-item-copy">
-                    My main focus was <a href="http://libgit2.github.com">libgit2</a>, an implementation of git with a nice API, and no dependencies on a UNIX environment. This led me to helping out with back-end systems, mainline git, and even the native clients (<a href="https://desktop.github.com">GitHub Desktop</a>). I helped run an open-source project, wrote its documentation, and found out how I work best.
-                </p>
-            </div><!-- end of resume-item -->
-
-            <div class="resume-item">
-                <h3 class="resume-item-title">Monsoon Commerce</h3>
-                <h4 class="resume-item-details">Don't Call It a Comeback &bull; 2011 — 2012</h4>
-                <p class="resume-item-copy">
-                    In 2010, I suffered a major personal setback.  I needed a change of pace, new scenery, and different technology.  I traded in my Droid for an iPhone, moved to Portland, and took a job downtown.
-                </p>
-                <p class="resume-item-copy">
-                    Here I learned the importance of fearlessness.  The code had a decent set of unit tests, and I had my very own copy of Resharper. There was no marketing safety net when making customer-facing product decisions.  It was terrifying and thrilling.
-                </p>
-                <p class="resume-item-copy">
-                    I worked on a system that helps people sell things on the Internet. Sellers tell my code what kinds of things they have, and my code lists those items on eBay and Amazon (and a dozen others), and <em>figures out what price they should be.</em>  I led the charge to modernize the UX on a six-year-old WinForms codebase, and educated the entire team on the best way to do it.
-                </p>
-            </div>
-
-            <div class="resume-item">
-                <h3 class="resume-item-title">Wacom Technology</h3>
-                <h4 class="resume-item-details">Taking On the World &bull; 2006 — 2011</h4>
-                <p class="resume-item-copy">
-                    I decided I wanted to be in the Portland area.  Pickings were slim at the time, but when a position at <em>this</em> company came up, I had to take it.
-                </p>
-                <p class="resume-item-copy">
-                    It was here that I learned practicality and self-doubt.  The coolest technology doesn't always fit your project.  The most elegant code isn't necessarily the best.  You can't rewrite the entire system every two weeks.
-                </p>
-                <p class="resume-item-copy">
-                    I wrote drivers for USB/HID devices, and the connectors and services that make them sing.  Without the software I made, a tablet would be nothing but a fancy mousepad; with it, a user can kick some serious ass.  The system spans the chasm from kernel- to user-mode, from datastream processing to UI.  And it does it in 13 languages.
-                </p>
-            </div>
         </section>
 
-        {% if site.resume_section_skills %}
-        <!-- begin Skills -->
-        <section class="content-section">
+        <section class="content-section"> <!-- Skills -->
 
             <header class="section-header">
                 <h2>Skills</h2>
@@ -203,12 +187,8 @@
                 </p>
             </div>
         </section>
-        <!-- end Skills -->
-        {% endif %}
 
-        {% if site.resume_section_education %}
-        <!-- begin Education -->
-        <section class="content-section">
+        <section class="content-section"> <!-- Education -->
 
             <header class="section-header">
                 <h2>Education</h2>
@@ -231,8 +211,6 @@
             </div>
 
         </section>
-        <!-- end Education -->
-        {% endif %}
 
         {% if site.resume_section_projects %}
         <!-- begin Projects -->
