Attitude and storytelling

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -50,13 +50,13 @@
                 <h3 class="resume-item-title">Gridium</h3>
                 <h4 class="resume-item-details">2014 — Present</h4>
                 <p class="resume-item-copy">
-                    The opportunity to work with a small, customer-focused startup at an early stage was very attractive to me, and since I've never worked at a company in this chapter of its history, I felt like I had to take this chance.
+                    When I joined Gridium, I was engineer number 6, and employee number 13. I had never worked at a company at this early stage, and the opportunity to shape the course of its history was very interesting to me.
                 </p>
                 <p class="resume-item-copy">
-                    I've found that being part of such a small team has some major advantages, among which is the ability to shape the culture and technological substrate. I'm helping to build the kind of company I want to work for. Working on a software system at the beginning of its life gave me the opportunity to apply all the lessons I've learned from working on more mature applications.
+                    I've found that being part of such a small team has some major advantages, among which is the ability to shape the culture and technological substrate. I'm helping to build the kind of company I want to work for. Working on a software system at the beginning of its life gave me the opportunity to apply all the lessons I've learned from working on more mature applications. I've taught and learned a lot about being making remote teams work.
                 </p>
                 <p class="resume-item-copy">
-                    I've been working on all parts of the web-application stack, from hosting in Docker to data storage to API design to Ember on the front end. I've also been hacking the culture with <a href="https://hubot.github.com/">Hubot</a>, and spreading organizational, cultural, and technological wisdom.
+                    I've been working on all parts of the web-application stack, from hosting in Docker to data storage to API design to Ember on the front end. I've also been hacking the culture with <a href="https://hubot.github.com/">Hubot</a>, and spreading organizational, cultural, and technological wisdom by speaking at conferences.
                 </p>
             </div><!-- end of resume-item -->
 
@@ -64,10 +64,10 @@
                 <h3 class="resume-item-title">GitHub</h3>
                 <h4 class="resume-item-details">2012 — 2014</h4>
                 <p class="resume-item-copy">
-                    GitHub had been on my I-need-to-work-here list since about 2009, and when I was offered a job, I jumped at it. It was everything I had hoped for, and more.
+                    GitHub had been on my I-need-to-work-here list since about 2009, and when I was offered a job there, I jumped at it. It was everything I had hoped for, and more.
                 </p>
                 <p class="resume-item-copy">
-                    This was where I found out what it is to be a citizen of the Internet in a real way. I traveled the world, speaking at conferences. I worked with my personal heroes. I learned what it was to help make a company. This was truly the big time.
+                    This was where I found out what it is to be a citizen of the Internet in a real way. I traveled the world, speaking at conferences. I worked with some of my personal heroes. I was freed from having a commute. I learned what it was to help make a company.
                 </p>
                 <p class="resume-item-copy">
                     My main focus was <a href="http://libgit2.github.com">libgit2</a>, an implementation of git with a nice API, and no dependencies on a UNIX environment. This led me to helping out with back-end systems, mainline git, and even the native clients (<a href="https://desktop.github.com">GitHub Desktop</a>). I helped run an open-source project, wrote its documentation, and found out how I work best.
@@ -94,7 +94,7 @@
             <div class="resume-item">
                 <h3 class="resume-item-title">Pro Git, 2nd Edition</h3>
                 <p class="resume-item-copy">
-                    This is effectively <em>the book</em> on Git, and I was honored and excited when Scott asked me to co-author the second edition. It's now even better than it was when I read it as a younger engineer, and the ability to help developers new and old become better at their craft is a source of pride.
+                    This is effectively <em>the book</em> on Git, and I was honored and excited when Scott asked me to co-author the second edition. It's now even better than it was when I read it as a younger engineer. The ability to help developers new and old become better at their craft is a point of pride for me, a strong reason why I do what I do.
                 </p>
             </div><!-- end of resume-item -->
 
@@ -108,7 +108,7 @@
             <div class="resume-item">
                 <h3 class="resume-item-title">Video Training</h3>
                 <p class="resume-item-copy">
-                    I love to teach, and as a side project I've been recording training videos on various topics.
+                    I've been recording training videos on various topics, as a way of feeding my desire to teach.
                 </p>
                 <ul class="resume-item-copy">
                     <li><a href="http://www.skillsoft.com/catalog/detail.asp?CourseCode=sd_gitf_a01_it_enus">Beginning</a> and <a href="http://www.skillsoft.com/catalog/detail.asp?CourseCode=sd_gitf_a02_it_enus">Advanced Git</a> (Skillsoft)</li>
@@ -126,14 +126,14 @@
             <div class="resume-item">
                 <h3 class="resume-item-title">Robots and Culture</h3>
                 <p class="resume-item-copy">
-                    I'd been thinking a lot about how automation can change a company's culture. The best example of this that I've seen is the addition of a robot to a team that uses chat. I gave <a href="/talks/robots/">this talk</a> at <a href="http://joyofcoding.org/">Joy of Coding 2015</a> in Rotterdam, and updated it for <a href="http://2015.cascadiajs.com/">CascadiaFest 2015</a> in Blaine, Washington.
+                    I'd been thinking a lot about how automation can change a company's culture. The best example of this that I've seen is the addition of a robot to a team that uses chat. I gave <a href="/talks/robots/">this talk</a> at <a href="http://joyofcoding.org/">Joy of Coding 2015</a> in Rotterdam, and also in an updated form at <a href="http://2015.cascadiajs.com/">CascadiaFest 2015</a> in Blaine, Washington.
                 </p>
             </div>
 
             <div class="resume-item">
                 <h3 class="resume-item-title">Better at Git</h3>
                 <p class="resume-item-copy">
-                    While I worked there on a Git implementation, I was very interested in teaching people about Git. I found that just a little bit of knowledge about Git internals made people <em>much</em> more effective at using the tool. I gave <a href="/talks/openblend.html">this talk</a> in various forms at various conferences over the course of two years:
+                    While I worked at GitHub on a Git implementation, I was very interested in teaching people about the tools they use every day. I found that just a little bit of knowledge about Git internals made people <em>much</em> more effective at using the tool. I gave <a href="/talks/openblend.html">a tips-and-tricks talk</a> in various forms at many conferences over the course of two years:
                 </p>
 
                 <ul class="resume-item-copy">
@@ -160,14 +160,14 @@
                   I've written device drivers, cross-platform libraries, and GUI applications in C and C++. I've worked on production applications in C#, using both WPF for client-side apps and ASP.NET on the server. I've taught <a href="http://www.infiniteskills.com/training/porting-from-python-2-to-python-3.html">a course</a> on converting from Python 2 to Python 3. I've done user experience work on front-end web applications using Ember, Angular, Knockout and Vanilla.js.
                 </p>
                 <p class="resume-item-copy">
-                  But that's just application code. I've automated deployments using bare shell scripts, Perl, Ansible manifests, and Kubernetes definitions. I've tinkered with Objective C, Lisp, and Haskell.  I came close to writing a parser for an installer script language, but settled for an Emacs syntax highlighter instead.
+                  But that's just application code. I've automated deployments using bare shell scripts, Perl, Ansible manifests, and Kubernetes definitions. I've tinkered with Objective C, Swift, Lisp, and Haskell.  I came close to writing a parser for an installer DSL, but settled for an Emacs syntax highlighter instead.
                 </p>
             </div>
 
             <div class="resume-item">
                 <h4 class="resume-item-details">Platforms &amp; Tools</h4>
                 <p class="resume-item-copy">
-                    I've written code for OS X, Linux, and Windows, and I've written code that runs on all three. I've solved the same problems Docker solves. I've written device drivers, GUI applications, HTTP backends, and HTML-CSS-Javascript front ends, with and without frameworks.
+                    I've written code for OS X, Linux, and Windows, and I've written code that runs on all three. I've solved some of the same problems Docker solves. I've written device drivers, GUI applications, HTTP backends, and HTML/CSS/Javascript front ends, with and without frameworks.
                 </p>
                 <p class="resume-item-copy">
                     I know the weird stuff too. I have a favorite source control tool. I have opinions on defect tracking. I know the difference between UCS-2 and UTF-16. I know what how you say what you say says about what you're saying. And I'd love to debate agile versus Agile.
